--- a/bom/Smart_Vibes_BOM.tex
+++ b/bom/Smart_Vibes_BOM.tex
@@ -33,26 +33,21 @@ colorlinks,linkcolor=black,citecolor=violet,urlcolor=blue
 \begin{table}[H]
 	\centering
 	\resizebox{\columnwidth}{!}{%
-	\begin{tabular}{l|l|c|l|l|l|l|c}
-    	Vendor ID & Part Number & Quantity & Price/Unit & Part Description & Related Customer Need & Total Cost & Vendor \\ \hline
-    	1120 & LSM303 & 2 & \$14.95 & Accelerometer & Measuring vibrations generated & \$29.90 & \href{https://www.adafruit.com/products/1120}{Adafruit} \\
-    	& & & & & near a construction site. & & \\
-    	2693 & N.A. & 2 & \$19.95 & 16GB MicroSD Card & Storing entire day's worth of data & \$39.90 & \href{https://www.adafruit.com/products/2693}{Adafruit} \\
-    	& & & & & before it is sent to the cloud. & & \\
-    	2922 & N.A. & 2 & \$8.95 & SD Card Add-On & Used to assist on-board storage & \$17.90 & \href{https://www.adafruit.com/products/2922}{Adafruit} \\
-    	& & & & & of data. & & \\
-    	380 & CR1220 & 2 & \$0.95 & Coin Cell Battery & Assist in the storage of data. & \$1.90 & \href{https://www.adafruit.com/products/380}{Adafruit} \\
-    	3061 & N.A. & 1 & \$29.95 & Adafruit Feather & Processing and monitoring the & \$29.95 & \href{https://www.adafruit.com/products/3061}{Adafruit} \\
-    	& & & & Microcontroller with Wifi & recorded vibrations. & & \\
-    	353 & N.A. & 2 & \$29.50 & 6600 mAh 3.7V Lithium- & Power sensor for extended periods & \$59.00 & \href{https://www.adafruit.com/product/353}{Adafruit} \\
-    	& & & & Ion Battery & of time, without needing human & & \\
-    	& & & & & interaction. & & \\
-    	2747 & N.A. & 1 & \$88.95 & Solar Panel & Extend the life of the battery. & \$88.95 & \href{https://www.adafruit.com/products/2747}{Adafruit} \\
-    	390 & N.A. & 1 & \$17.50 & Solar Panel Adapter & Protect the battery and the & \$17.50 & \href{https://www.adafruit.com/products/390}{Adafruit} \\
-    	& & & & & microcontroller. & & \\
-		N.A. & 474-SEN-11744 & 1 & \$61.25 & Geophone & Measure ground vibrations. & \$61.25 & \href{http://www.mouser.com/ProductDetail/SparkFun-Electronics/SEN-11744/?qs=\%2fha2pyFaduhLW6YoPw5UUIdTRP1X\%252btPruyfOHvl8\%2fY0\%3d}{Mouser} \\
-    	 39RL33 & N.A. & 1 & \$0.00 & White Nylon Filament & Material for 3D-printed enclosure. & \$34.75 & \href{https://www.grainger.com/product/FILABOT-White-Filament-39RL33}{Grainger} \\ \hline
-    	Total & & & & & & \$391.00
+	\begin{tabular}{l|l|c|l|l|l|c|c}
+    	Vendor ID & Part Number & Quantity & Price/Unit & Part Description & Total Cost & Vendor & Datasheet\\ \hline
+    	1120 & LSM303 & 2 & \$14.95 & Accelerometer & \$29.90 & \href{https://www.adafruit.com/products/1120}{Adafruit} & \href{https://cdn-shop.adafruit.com/datasheets/LSM303DLHC.PDF}{PDF} \\
+    	2693 & N.A. & 2 & \$19.95 & 16GB MicroSD Card & \$39.90 & \href{https://www.adafruit.com/products/2693}{Adafruit} & N.A. \\
+    	2922 & N.A. & 2 & \$8.95 & SD Card Add-On & \$17.90 & \href{https://www.adafruit.com/products/2922}{Adafruit} & \href{http://www.nxp.com/documents/data_sheet/PCF8523.pdf}{PDF} \\
+    	380 & CR1220 & 2 & \$0.95 & Coin Cell Battery & \$1.90 & \href{https://www.adafruit.com/products/380}{Adafruit} & N.A. \\
+    	3061 & N.A. & 1 & \$29.95 & Adafruit Feather & \$29.95 & \href{https://www.adafruit.com/products/3061}{Adafruit} & \href{https://learn.adafruit.com/system/assets/assets/000/030/130/original/atmel-42181-sam-d21_datasheet.pdf?1453847579}{PDF} \\
+    	353 & N.A. & 2 & \$29.50 & 6600 mAh 3.7V Lithium- & \$59.00 & \href{https://www.adafruit.com/product/353}{Adafruit} & \href{https://cdn-shop.adafruit.com/product-files/353/C450_-_ICR18650_6600mAh_3.7V_20140729.pdf}{PDF} \\
+    	& & & & Ion Battery & & \\
+    	2747 & N.A. & 1 & \$88.95 & Solar Panel & \$88.95 & \href{https://www.adafruit.com/products/2747}{Adafruit} & \href{https://www.voltaicsystems.com/9-watt-panel}{Website} \\
+    	390 & N.A. & 1 & \$17.50 & Solar Panel Adapter & \$17.50 & \href{https://www.adafruit.com/products/390}{Adafruit} & \href{http://www.adafruit.com/datasheets/MCP73871.pdf}{PDF} \\
+		N.A. & 474-SEN-11744 & 1 & \$61.25 & Geophone & \$61.25 & \href{http://www.mouser.com/ProductDetail/SparkFun-Electronics/SEN-11744/?qs=\%2fha2pyFaduhLW6YoPw5UUIdTRP1X\%252btPruyfOHvl8\%2fY0\%3d}{Mouser} & \href{http://cdn.sparkfun.com/datasheets/Sensors/Accelerometers/SM-24\%20Brochure.pdf}{PDF} \\
+    	 39RL33 & N.A. & 1 & \$0.00 & White Nylon Filament & \$34.75 & \href{https://www.grainger.com/product/FILABOT-White-Filament-39RL33}{Grainger} & \href{https://www.grainger.com/product/FILABOT-White-Filament-39RL33}{Website} \\
+    	 & & & & for 3-D Printer & & \\ \hline
+    	Total & & & & & \$391.00 &
 	\end{tabular}%
 	}
     %\caption{Bill of materials.}
