Update bill of materials

--- a/bom/Smart_Vibes_BOM.tex
+++ b/bom/Smart_Vibes_BOM.tex
@@ -28,26 +28,34 @@ colorlinks,linkcolor=black,citecolor=violet,urlcolor=blue
 %\author{Smart Vibes}
 %\date{January 31, 2016}
 %\maketitle
-%
-%\newpage
+
+\begin{center}
+\textbf{Bill of Materials}\\ Smart Vibes
+\end{center}
 \begin{table}[H]
 	\centering
 	\resizebox{\columnwidth}{!}{%
-	\begin{tabular}{l|l|c|l|l|l|c|c}
-    	Vendor ID & Part Number & Quantity & Price/Unit & Part Description & Total Cost & Vendor & Datasheet\\ \hline
+	\begin{tabular}{l|l|c|l|l|r|c|c}
+    	Vendor ID & Part Number & Quantity & Price/Unit & Part Description & Cost & Vendor & Datasheet\\ \hline
     	1120 & LSM303 & 2 & \$14.95 & Accelerometer & \$29.90 & \href{https://www.adafruit.com/products/1120}{Adafruit} & \href{https://cdn-shop.adafruit.com/datasheets/LSM303DLHC.PDF}{PDF} \\
-    	2693 & N.A. & 2 & \$19.95 & 16GB MicroSD Card & \$39.90 & \href{https://www.adafruit.com/products/2693}{Adafruit} & N.A. \\
-    	2922 & N.A. & 2 & \$8.95 & SD Card Add-On & \$17.90 & \href{https://www.adafruit.com/products/2922}{Adafruit} & \href{http://www.nxp.com/documents/data_sheet/PCF8523.pdf}{PDF} \\
-    	380 & CR1220 & 2 & \$0.95 & Coin Cell Battery & \$1.90 & \href{https://www.adafruit.com/products/380}{Adafruit} & N.A. \\
-    	3061 & N.A. & 1 & \$29.95 & Adafruit Feather & \$29.95 & \href{https://www.adafruit.com/products/3061}{Adafruit} & \href{https://learn.adafruit.com/system/assets/assets/000/030/130/original/atmel-42181-sam-d21_datasheet.pdf?1453847579}{PDF} \\
+    	2693 & N.A. & 2 & \$19.95 & 16GB MicroSD Card & \$39.90 & \href{https://www.adafruit.com/products/2693}{Adafruit} & \href{https://www.adafruit.com/products/2693}{Website} \\
+    	2922 & N.A. & 2 & \$8.95 & SD Card Adapter & \$17.90 & \href{https://www.adafruit.com/products/2922}{Adafruit} & \href{http://www.nxp.com/documents/data_sheet/PCF8523.pdf}{PDF} \\
+    	380 & CR1220 & 2 & \$0.95 & Coin Cell Battery & \$1.90 & \href{https://www.adafruit.com/products/380}{Adafruit} & \href{https://www.adafruit.com/products/380}{Website} \\
+    	3061 & N.A. & 1 & \$34.95 & Adafruit Feather & \$34.95 & \href{https://www.adafruit.com/products/3061}{Adafruit} & \href{https://learn.adafruit.com/system/assets/assets/000/030/130/original/atmel-42181-sam-d21_datasheet.pdf?1453847579}{PDF} \\
     	353 & N.A. & 2 & \$29.50 & 6600 mAh 3.7V Lithium- & \$59.00 & \href{https://www.adafruit.com/product/353}{Adafruit} & \href{https://cdn-shop.adafruit.com/product-files/353/C450_-_ICR18650_6600mAh_3.7V_20140729.pdf}{PDF} \\
     	& & & & Ion Battery & & \\
     	2747 & N.A. & 1 & \$88.95 & Solar Panel & \$88.95 & \href{https://www.adafruit.com/products/2747}{Adafruit} & \href{https://www.voltaicsystems.com/9-watt-panel}{Website} \\
-    	390 & N.A. & 1 & \$17.50 & Solar Panel Adapter & \$17.50 & \href{https://www.adafruit.com/products/390}{Adafruit} & \href{http://www.adafruit.com/datasheets/MCP73871.pdf}{PDF} \\
+    	579-MCP73871-2CCI/ML & MCP73871-2CCI/ML & 1 & \$1.94 & Battery Charger & \$1.94 & \href{http://www.mouser.com/ProductDetail/Microchip-Technology/MCP73871-2CCI-ML/?qs=qXsUupcbpXyQfJ2clznZxw\%3D\%3D}{Mouser} & \href{http://www.mouser.com/ds/2/268/22090a-52174.pdf}{PDF} \\
 		N.A. & 474-SEN-11744 & 1 & \$61.25 & Geophone & \$61.25 & \href{http://www.mouser.com/ProductDetail/SparkFun-Electronics/SEN-11744/?qs=\%2fha2pyFaduhLW6YoPw5UUIdTRP1X\%252btPruyfOHvl8\%2fY0\%3d}{Mouser} & \href{http://cdn.sparkfun.com/datasheets/Sensors/Accelerometers/SM-24\%20Brochure.pdf}{PDF} \\
-    	 39RL33 & N.A. & 1 & \$0.00 & White Nylon Filament & \$34.75 & \href{https://www.grainger.com/product/FILABOT-White-Filament-39RL33}{Grainger} & \href{https://www.grainger.com/product/FILABOT-White-Filament-39RL33}{Website} \\
-    	 & & & & for 3-D Printer & & \\ \hline
-    	Total & & & & & \$391.00 &
+    	 39RL33 & N.A. & 1 & \$34.75 & White Nylon Filament & \$34.75 & \href{https://www.grainger.com/product/FILABOT-White-Filament-39RL33}{Grainger} & \href{https://www.grainger.com/product/FILABOT-White-Filament-39RL33}{Website} \\
+    	 & & & & for 3-D Printer & & \\
+    	 2788 & N.A. & 1 & \$0.95 & DC Jack Adapter Cable & \$0.95 & \href{https://www.adafruit.com/products/2788}{Adafruit} & \href{https://www.adafruit.com/products/2788}{Website} \\
+    	 & & & & for Battery Charger & & & \\
+    	 581-TAP475K016SCS & TAP475K016SCS & 1 & \$0.67 & Tantalum Capacitor & \$0.67 & \href{http://www.mouser.com/ProductDetail/AVX/TAP475K016SCS/?qs=sGAEpiMZZMtZ1n0r9vR22d\%252b8XmbM9QM8L4TTXY3LGQ8\%3d}{Mouser} & \href{http://www.mouser.com/ds/2/40/tap-776819.pdf}{PDF} \\
+    	 & & & & for Battery Charger & & & \\
+    	 261 & N.A. & 1 & \$0.75 & JST 2-pin Cable & \$0.75 & \href{https://www.adafruit.com/product/261}{Adafruit} & \href{https://www.adafruit.com/product/261}{Website} \\
+    	 & & & & for Battery Charger & & & \\ \hline
+    	Total Cost & & & & & \$372.81 &
 	\end{tabular}%
 	}
     %\caption{Bill of materials.}
