Completed the BOM and functional diagram

--- a/bom/bom.tex
+++ b/bom/bom.tex
@@ -54,8 +54,11 @@ colorlinks,linkcolor=black,citecolor=violet,urlcolor=blue
     	 581-TAP475K016SCS & TAP475K016SCS & 1 & \$0.67 & Tantalum Capacitor & \$0.67 & \href{http://www.mouser.com/ProductDetail/AVX/TAP475K016SCS/?qs=sGAEpiMZZMtZ1n0r9vR22d\%252b8XmbM9QM8L4TTXY3LGQ8\%3d}{Mouser} & \href{http://www.mouser.com/ds/2/40/tap-776819.pdf}{PDF} \\
     	 & & & & for Battery Charger & & & \\
     	 261 & N.A. & 1 & \$0.75 & JST 2-pin Cable & \$0.75 & \href{https://www.adafruit.com/product/261}{Adafruit} & \href{https://www.adafruit.com/product/261}{Website} \\
-    	 & & & & for Battery Charger & & & \\ \hline
-    	Total Cost & & & & & \$372.81 &
+    	 & & & & for Battery Charger & & & \\
+    	 	PMT-37N28AL01-04-ND & PMT-37N28AL01-04 & 1 & \$8.57 & Speaker & \$8.57 & \href{http://www.digikey.com/product-detail/en/peerless-by-tymphany/PMT-37N28AL01-04/PMT-37N28AL01-04-ND/6211115}{Digi-Key} & \href{http://www.tymphany.com/wp-content/themes/pathfinders/cache/pdfs/PMT-37N28AL01-04.pdf}{PDF} \\
+        2308 & N.A. & 1 & \$2.50 & Antenna with uFL & \$2.50 & \href{https://www.adafruit.com/products/2308}{Adafruit} & \href{https://www.adafruit.com/products/2308}{Website} \\
+    	 & & & & Connector & & & \\\hline
+    	Total Cost & & & & & \$383.88 &
 	\end{tabular}%
 	}
     %\caption{Bill of materials.}
