COMPLETE: BOM and functional diagram

--- a/bom/bom.tex
+++ b/bom/bom.tex
@@ -39,8 +39,9 @@ colorlinks,linkcolor=black,citecolor=violet,urlcolor=blue
     	Vendor ID & Part Number & Quantity & Price/Unit & Part Description & Cost & Vendor & Datasheet\\ \hline
     	1120 & LSM303 & 2 & \$14.95 & Accelerometer & \$29.90 & \href{https://www.adafruit.com/products/1120}{Adafruit} & \href{https://cdn-shop.adafruit.com/datasheets/LSM303DLHC.PDF}{PDF} \\
     	2693 & N.A. & 2 & \$19.95 & 16GB MicroSD Card & \$39.90 & \href{https://www.adafruit.com/products/2693}{Adafruit} & \href{https://www.adafruit.com/products/2693}{Website} \\
-    	2922 & N.A. & 2 & \$8.95 & SD Card Adapter & \$17.90 & \href{https://www.adafruit.com/products/2922}{Adafruit} & \href{http://www.nxp.com/documents/data_sheet/PCF8523.pdf}{PDF} \\
-    	380 & CR1220 & 2 & \$0.95 & Coin Cell Battery & \$1.90 & \href{https://www.adafruit.com/products/380}{Adafruit} & \href{https://www.adafruit.com/products/380}{Website} \\
+    	2922 & N.A. & 2 & \$8.95 & SD Card Breakout & \$17.90 & \href{https://www.adafruit.com/products/2922}{Adafruit} & \href{http://www.nxp.com/documents/data_sheet/PCF8523.pdf}{PDF} \\
+    	& & & & with Coin Cell Battery & & & \\
+    	%380 & CR1220 & 2 & \$0.95 & Coin Cell Battery & \$1.90 & \href{https://www.adafruit.com/products/380}{Adafruit} & \href{https://www.adafruit.com/products/380}{Website} \\
     	3061 & N.A. & 1 & \$34.95 & Adafruit Feather & \$34.95 & \href{https://www.adafruit.com/products/3061}{Adafruit} & \href{https://learn.adafruit.com/system/assets/assets/000/030/130/original/atmel-42181-sam-d21_datasheet.pdf?1453847579}{PDF} \\
     	353 & N.A. & 2 & \$29.50 & 6600 mAh 3.7V Lithium- & \$59.00 & \href{https://www.adafruit.com/product/353}{Adafruit} & \href{https://cdn-shop.adafruit.com/product-files/353/C450_-_ICR18650_6600mAh_3.7V_20140729.pdf}{PDF} \\
     	& & & & Ion Battery & & \\
@@ -57,8 +58,8 @@ colorlinks,linkcolor=black,citecolor=violet,urlcolor=blue
     	 & & & & for Battery Charger & & & \\
     	 	PMT-37N28AL01-04-ND & PMT-37N28AL01-04 & 1 & \$8.57 & Speaker & \$8.57 & \href{http://www.digikey.com/product-detail/en/peerless-by-tymphany/PMT-37N28AL01-04/PMT-37N28AL01-04-ND/6211115}{Digi-Key} & \href{http://www.tymphany.com/wp-content/themes/pathfinders/cache/pdfs/PMT-37N28AL01-04.pdf}{PDF} \\
         2308 & N.A. & 1 & \$2.50 & Antenna with uFL & \$2.50 & \href{https://www.adafruit.com/products/2308}{Adafruit} & \href{https://www.adafruit.com/products/2308}{Website} \\
-    	 & & & & Connector & & & \\\hline
-    	Total Cost & & & & & \$383.88 &
+    	 & & & & Connector & & & \\ \hline
+    	Total Cost & & & & & \$381.98 &
 	\end{tabular}%
 	}
     %\caption{Bill of materials.}
