Upload first revision of report 2

--- a/reports/02/02.tex
+++ b/reports/02/02.tex
@@ -33,7 +33,7 @@ colorlinks,linkcolor=black,citecolor=violet,urlcolor=blue
 
 \newpage
 \section{These Past Two Weeks}
-In summary, these past two weeks were spent working on the Adafruit Feather that Jordan ordered, revising the BOM to make sure all the components are compatible with each other, and revising the functional diagram to more accurately depict our design.
+During the last two weeks, we finalized our bill of materials by updating the price of certain parts and adding in a few more parts necessary for our sensor. Some of these parts include an antenna to extend the range of wireless communication and a capacitor to help the lithium-ion battery charge off the solar panel. In addition, we also revised the functional diagram and started programming the Adafruit Feather microcontroller.
 
 \begin{figure}[H]
     \centering
@@ -75,6 +75,13 @@ In summary, these past two weeks were spent working on the Adafruit Feather that
     \caption{Bill of materials for the vibration sensor designed by Smart Vibes. This latest revision ensures compatibility between all the components.}
     \label{tab:bom}
 \end{table}
+
+\section{What's Next?}
+\begin{itemize}
+\item Keep programming and familiarizing ourselves with the microcontroller.
+\item Order the parts in our BOM.
+\item Work on the design of our housing using prototyping foam.
+\end{itemize}
 
 \section{Responsibilities}
 The responsibilities of each group member has not changed since the last report. The distribution of work in Smart Vibes is as follows:\\
