Update log Ezequiel's log for Thursday, 2/9/2017

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -30,13 +30,13 @@ colorlinks,linkcolor=blue,citecolor=violet,urlcolor=magenta
 
 \newpage
 
-\section*{Monday, January 23, 2017}
+\section{Monday, January 23, 2017}
 \begin{itemize}
 \item Worked on first presentation and report on Google Drive.
 \item Converted the Google Doc into a Latex doc
 \end{itemize}
 
-\section*{Tuesday, January 24, 2017}
+\section{Tuesday, January 24, 2017}
 \begin{itemize}
 \item I was chosen as team leader by Joshua due to his busy schedule impeding him from leading.
 \item Performed presentation 1.
@@ -50,12 +50,12 @@ colorlinks,linkcolor=blue,citecolor=violet,urlcolor=magenta
 \item \sout{Create a Github private repo to host Design 2 group work.} (Completed on 1/27/2017)
 \end{itemize}
 
-\section*{Thursday, January 26, 2017}
+\section{Thursday, January 26, 2017}
 \begin{itemize}
 \item Submitted peer assessments for Poly Builders, Team Concrete, and Phoenix Designs.
 \end{itemize}
 
-\section*{Friday, January 27, 2017}
+\section{Friday, January 27, 2017}
 \begin{itemize}
 \item Created a private Githup repo named Design 2 for our group to host code and other work.
 \item Begin working with Adafruit Feather that Jordan ordered and received
@@ -79,5 +79,24 @@ colorlinks,linkcolor=blue,citecolor=violet,urlcolor=magenta
 
 \end{itemize}
 
+\section{Friday, February 3, 2017}
+Revised the functional diagram and bill of materials.
+
+\section{Monday, February 6, 2017}
+\begin{itemize}
+\item Worked on presentation 2.
+\item Worked on report 2.
+\end{itemize}
+
+\section{Thursday, February 9, 2017}
+\begin{itemize}
+\item Met together with team during class time, even though it was cancelled, to work on programming.
+\item Josh began designing the casing in SolidWorks.
+\item Marc was given the task of learning the cloud access aspect of this project.
+\item Jordan and I will program the sensor.
+\item Can SPI communicate with parallel devices at the same time like I2C? \texttt{SPI devices communicate in full duplex mode using a master-slave architecture with a single master. The master device originates the frame for reading and writing. Multiple slave devices are supported through selection with individual slave select (SS) lines.}
+\item Does the wifi chip not allow other communication to happen simultaneously? \texttt{.}
+
+\end{itemize}
 
 \end{document}
