Update log on Friday, 2/24/2017

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -105,4 +105,9 @@ Revised the functional diagram and bill of materials.
 \item We are left with the question of how to connect the Feather to MS Azure and push data to it.
 \end{itemize}
 
+\section{Friday, February 24, 2017}
+\begin{itemize}
+\item Met together with my team at 11am to work on the presentation due on Monday.
+\end{itemize}
+
 \end{document}
