Update Ezequiel's log for Friday, March 3, 2017

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -110,4 +110,13 @@ Revised the functional diagram and bill of materials.
 \item Met together with my team at 11am to work on the presentation due on Monday.
 \end{itemize}
 
+\section{Friday, March 3, 2017}
+\begin{itemize}
+\item Began programming the other Feather that we received.
+\item Follow the wifi tutorial on this \href{https://learn.adafruit.com/adafruit-feather-m0-wifi-atwinc1500/using-the-wifi-module}{Adafruit} page.
+\item Go to \textbf{Sketch} $\rightarrow$ \textbf{Include Library} $\rightarrow$ \textbf{Manage Libraries} and search for \textbf{wifi101}. Install the latest version.
+\item Go to the Adafruit page for the \href{https://learn.adafruit.com/lsm303-accelerometer-slash-compass-breakout/assembly-and-wiring}{LSM303DLHC} to learn how to wire it up and write code for it.
+\item Installed the LSM303DLHC throgh the Library Manager and the Adafruit Sensor library from the git \href{https://github.com/adafruit/Adafruit_Sensor}{repo}.
+\end{itemize}
+
 \end{document}
