Update log for March 14, 2017, with research done on the Feather microcontroller

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -119,4 +119,23 @@ Revised the functional diagram and bill of materials.
 \item Installed the LSM303DLHC throgh the Library Manager and the Adafruit Sensor library from the git \href{https://github.com/adafruit/Adafruit_Sensor}{repo}.
 \end{itemize}
 
+\section{Thursday, March 9, 2017}
+\begin{itemize}
+\item Googled \textbf{arduino mongodb example} for help!
+\end{itemize}
+
+% I'm going to start taking better logs from this point forward!
+\section{Tuesday, March 14, 2017}
+\begin{itemize}
+\item Visited this \href{https://www.adafruit.com/product/3010}{Adafruit} page on everything about the Adafruit Feather M0 WiFi - ATSAMD21 + ATWINC1500 microcontroller.
+\item Googled \textsl{Atsamd21} to learn more about the chip architecture. Clicked on an \href{http://www.atmel.com/products/microcontrollers/arm/sam-d.aspx}{Atmel} page to learn more. More specifically, the Feather features an ATSAMD21G18 ARM Cortex-M0+ processor. The Feather also includes an Atmel ATWINC1500 Wi-Fi network controller.
+\item The datasheet for the ATSAMD21 can be found \href{https://cdn-learn.adafruit.com/assets/assets/000/030/130/original/atmel-42181-sam-d21_datasheet.pdf?1453847579}{here} and a programming guide for the ATWINC1500 can be found \href{https://cdn-learn.adafruit.com/assets/assets/000/030/129/original/atmel-42418-software-programming-guide-for-atwinc1500-wifi-using-samd21-xplained-pro_userguide.pdf?1453847486}{here}.
+\item Google what ASF is; the short answer is the following: the Atmel Software Framework (ASF) is a MCU software library providing a large collection of embedded software for Atmel flash MCUs. More info on the ASF can be found \href{http://www.atmel.com/tools/avrsoftwareframework.aspx}{here}.
+\item Googled what an mcu is; it stand for microncontroller unit.
+\item \textbf{Keep reading this} Visited this \href{https://learn.adafruit.com/adafruit-feather-m0-wifi-atwinc1500/pinouts}{Adafruit} page to learn more on the pinouts of the Feather.
+\item Googled what UART is; go to this \href{https://learn.sparkfun.com/tutorials/serial-communication/uarts}{Sparkfun} page to learn more. Basically, the universal asynchronous receiver/transmitter (UART) is a block of circuitry responsible for implementing serial communication.
+\end{itemize}
+
+\textbf{To do:} Look into EagleCAD and Fritzing software.
+
 \end{document}
