Update project log for March 17, 2017

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -153,7 +153,14 @@ Revised the functional diagram and bill of materials.
 	\item Fixed the above problem. Use a lower value for the pullup resistors, like 2.2 k$\Omega$.!
 	\end{itemize}
 \item \href{https://cdn-shop.adafruit.com/datasheets/LSM303DLHC.PDF}{Datasheet} of the LSM303DLHC accelerometer and compass.
-\item Visit this \href{https://learn.adafruit.com/lsm303-accelerometer-slash-compass-breakout/calibration}{Adafruit} page to learn more about the calibration of the accelerometer and compass. There is a calibration tool that can be found \href{http://www.varesano.net/blog/fabio/freeimu-magnetometer-and-accelerometer-calibration-gui-alpha-version-out}{here}
+\item Visit this \href{https://learn.adafruit.com/lsm303-accelerometer-slash-compass-breakout/calibration}{Adafruit} page to learn more about the calibration of the accelerometer and compass. There is a calibration tool that can be found \href{http://www.varesano.net/blog/fabio/freeimu-magnetometer-and-accelerometer-calibration-gui-alpha-version-out}{here}.
+\item Calibration steps in Windows PC:
+	\begin{itemize}
+	\item Go to the this \href{https://github.com/mjs513/FreeIMU-Updates/wiki/04.-FreeIMU-Calibration}{GitHub} page for more detailed instructions.
+	\item Download the this \href{http://bazaar.launchpad.net/~fabio-varesano/freeimu/trunk/tarball/49?start_revid=49}{tarball} of the source files.
+	\item Download \href{https://www.python.org/ftp/python/2.7.13/python-2.7.13.msi}{Python 2.7.13}.
+	\item \textbf{keep it going...}
+	\end{itemize}
 \end{itemize}
 
 \textbf{To do:}
@@ -162,5 +169,22 @@ Revised the functional diagram and bill of materials.
 \item Perform interrupts using accelerometer.
 \item Write data to the SD card with the Adalogger breakout board.
 \end{itemize}
+
+\section{Thurssday, March 16, 2017}
+Had a group talk with Harish, here are the notes.
+\begin{itemize}
+\item Study the example code for the accelerometer.
+\end{itemize}
+
+\section{Friday, March 17, 2017}
+\begin{itemize}
+\item Cloned the Azure Docs \href{https://github.com/Microsoft/azure-docs}{GitHub} repo.
+\item Cloned the Azure IoT Starter Kit \href{https://github.com/Azure-Samples/iot-hub-c-m0wifi-getstartedkit}{GitHub} repo. The Microsoft page on the same subject can be found \href{https://azure.microsoft.com/en-us/resources/samples/iot-hub-c-m0wifi-getstartedkit/}{here}.
+\item More Microsoft IoT repos can be found \href{https://github.com/ms-iot}{here}.
+\item The Windows Remote Arduino Experience app can be found \href{https://www.microsoft.com/store/apps/9nblggh2041m}{here}. With it, you can control an Arduino compatible device with a Windows 10 computer. The GitHub repo can be found \href{https://github.com/ms-iot/remote-wiring#notes-on-wifi-and-ethernet}{here}.
+\item The Windows Remote Arduino Samples repo can be found \href{https://github.com/ms-iot/windows-remote-arduino-samples}{here}.
+\end{itemize}
+
+\textbf{To do:} Take a look at the last three bullet points.
 
 \end{document}
