Update log for March 19, 2017

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -187,4 +187,21 @@ Had a group talk with Harish, here are the notes.
 
 \textbf{To do:} Take a look at the last three bullet points.
 
+\section{Sunday, March 19, 2017}
+\begin{itemize}
+\item Looked up what analog-to-digital converter channels meant. It means the number of inputs the ADC can select from.
+\item Looked up what direct memory access (DMA) channels were. Short for direct memory access, a technique for transferring data from main memory to a device without passing it through the CPU. Computers that have DMA channels can transfer data to and from devices much more quickly than computers without a DMA channel can. To learn more go to the \href{https://en.wikipedia.org/wiki/Direct_memory_access}{Wikipedia} page.
+\end{itemize}
+
+\section{To Do List}
+\begin{itemize}
+\item Look into EagleCAD and \sout{Fritzing software}.
+\item Look up the power-saving features of the LSM303DLHC (accelerometer).
+\item Perform interrupts using accelerometer.
+\item Write data to the SD card with the Adalogger breakout board.
+\item Take a look at the last three bullet points for March 17, 2017.
+\item Read up on DMA.
+\item Left off on page 28 of \textsl{atmel-42181-sam-d21\_datasheet.pdf}.
+\end{itemize}
+
 \end{document}
